# WireSentinel-Kernel

./: Cargo.toml  README.md
.github/workflows/: ci.yml
docs/: architecture.md  callouts.md  ipc.md  recovery.md  security.md
driver/callouts/: dns_observe.c  dns_observe.h  manager.c  manager.h
driver/classify/: classify.c  classify.h
driver/filters/: filters.c  filters.h
driver/guardian/: device.c  driver.c  driver.h  guids.c
driver/ipc/: ioctl_dispatch.c  ioctl_dispatch.h  security.c  security.h
driver/killswitch/: killswitch.c  killswitch.h
driver/policy/: app_policy.c  app_policy.h
driver/recovery/: recovery.c  recovery.h
driver/route/: route_assignment.c  route_assignment.h
driver/state/: guardian_state_mgr.c  guardian_state_mgr.h
driver/telemetry/: telemetry.c  telemetry.h
guardian/: guardian.inf  guardian.sln  guardian.vcxproj
scripts/: build.ps1  run-tests.ps1  sign.ps1
shared/: guardian_public.h  guardian_types.h
shared/ids/: guardian_guids.h
shared/protocol/: guardian_ioctl.h  guardian_message.h
shared/structures/: app_policy.h  dns.h  guardian_state.h  killswitch.h  route_assignment.h  route_assignment_v2.h  telemetry.h
usermode/controller/: Cargo.toml
usermode/controller/src/: client_impl.rs  device_impl.rs  ioctl.rs  lib.rs  protocol.rs  stub.rs  types.rs
usermode/tests/: Cargo.toml
usermode/tests/src/: bench_ipc.rs  hybrid.rs  lib.rs  security.rs
