[package]
name = "guardian-controller"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "WireSentinel Guardian kernel driver IOCTL client"

[dependencies]
thiserror = "2"
uuid = { version = "1", features = ["v4"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_Security",
] }

[dev-dependencies]
tempfile = "3"
